Fixed Form Spacing on Mobile

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2198,6 +2198,10 @@ fieldset {
 		float: none;
 		text-align: center;
 	}
+        .container2{
+            margin-top:20px;
+            
+        }
 
 }
 
